se agrega estilos para la pag de donaciones

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ label[for="InputEmailNovedades"] {
     font-weight: bold;
 }
 
-img[src="img/logo.PNG"] {
+img[alt="Logo de Hogar de Patis footer"] {
     margin-top: 1em;
     width: 5em;
 }
