se agregan cambios en el footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,10 @@ h2 {
 }
 
 
+#main_donaciones {
+    margin: 50px 50px;
+}
+
 .card-text {
     color: white;
     font-weight: bold;
@@ -116,3 +120,19 @@ img[alt="Logo de Hogar de Patis footer"] {
     color: #a97171;
     text-decoration: none;
 }
+
+#form_novedades_footer {
+    background-color: white;
+    color: #a97171;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border-radius: 5px;
+}
+
+#contenedor_form button[type="submit"] {
+    background-color: #a97171;
+    color: white;
+    border: none;
+}
+
+
