--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 
- /* .color1 {color: #a97171;}
+/* .color1 {color: #a97171;}
 .color2 {color: #b28d7c;}
 .color3 {color: #c0b3a1;}
 .color4 {color: #d6d6d0;}
@@ -15,28 +15,12 @@
 
 
 
+
+/* Mobile First */
 * {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-}
-
-h1 {
-    display: inline;
-}
-
-nav ul {
-    display: inline-block;
-}
-
-nav ul li {
-    display: inline-block;
-    list-style-type: none;
-}
-
-nav ul li a {
-    color: white; 
-    font-weight: bold;
 }
 
 header {
@@ -44,23 +28,47 @@ header {
     color: white;
 }
 
-header div .row {
-    height: 5em;
+#paw_logo {
+    animation: rotatePaw 0.4s infinite linear alternate;
 }
 
-nav li a:hover {
-    color: #a97171;
+@keyframes rotatePaw {
+    0% {
+        transform: rotate(-20deg);
+    }
+
+    25% {
+        transform: rotate(-10deg);
+    }
+
+    50% {
+        transform: rotate(0deg);
+    }
+
+    75% {
+        transform: rotate(10deg);
+    }
+
+    100% {
+        transform: rotate(20deg);
+    }
 }
 
-#sectionSalvarVidas h2 {
-    margin-top: 70px;
+nav ul li {
+    list-style-type: none;
 }
 
-h2 {
-    color: #b48eb0;
+nav ul li a {
+    color: white;
     font-weight: bold;
 }
 
+.fa-bars {
+    color: white;
+    border: white 1px solid;
+    border-radius: 4px;
+    padding: 5px;
+}
 
 main {
     margin-top: 3em;
@@ -71,67 +79,50 @@ main {
     margin-top: 0px;
 }
 
+h1 {
+    font-size: 23px;
+}
+
+h2 {
+    color: #b48eb0;
+    font-weight: bold;
+}
+
+h3 {
+    color: #a97171;
+}
+
+#sectionSalvarVidas h2 {
+    margin-top: 20px;
+}
+
+.card {
+    border: none;
+}
+
 .card-text {
     color: white;
     font-weight: bold;
-    font-size: 30PX;
+    font-size: 1em;
+}
+
+#lista_requisitos_tansitos li {
+    list-style-type: none;
 }
 
 footer {
     background-color: #c0b3a1;
     color: white;
-    height: 15em;
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
 
-.menu_footer li {
-    list-style-type: none;
-}
-
-.menu_footer li a {
-    color: white; 
-    text-decoration: none;
-}
-
-.titulo_menu {
-    font-weight: bold;
-    margin-bottom: 1em;
-}
-
-.menu_footer {
-    margin-top: 20px;
-}
-
-.seguinos {
-    font-weight: bold;
-    margin-bottom: 1em;
-}
-
-label[for="InputEmailNovedades"] {
-    font-weight: bold;
-}
-
-img[alt="Logo de Hogar de Patis footer"] {
-    margin-top: 1em;
-    width: 5em;
-}
-
-.iconos_redes button{
-    border: none;
-    background: none;
-    color: white;
-}
-
-.menu_footer li a:hover {
-    color: #a97171;
-    text-decoration: none;
-}
-
-#form_novedades_footer {
+#footer-form-novedades {
     background-color: white;
     color: #a97171;
-    padding-top: 1em;
-    padding-bottom: 1em;
     border-radius: 5px;
+    width: 20em;
+    padding: 2em;
 }
 
 #contenedor_form button[type="submit"] {
@@ -140,57 +131,157 @@ img[alt="Logo de Hogar de Patis footer"] {
     border: none;
 }
 
-#lista_requisitos_tansitos li{
+.menu_footer li {
     list-style-type: none;
 }
 
-#sectionTransitos h4{
-    margin-left: 2em;
-    font-weight: bold;
-}
-
-#lista_requisitos_tansitos{
-    margin-left: 3em;
-}
-
-h3 {
-    color: #a97171;
-}
-
-#paw_logo {
-    animation: rotatePaw 0.4s infinite linear alternate;
-}
-
-@keyframes rotatePaw {
-    0% {
-      transform:rotate(-20deg);
-    }
-    25% {
-       transform:rotate(-10deg);
-    }
-    50% {
-       transform:rotate(0deg);
-    }
-    75% {
-       transform:rotate(10deg);
-    }
-    100% {
-      transform: rotate(20deg);
-    }
-  }
-
-hr {
-    border: #b48eb0 2px solid;
-    border-radius: 40px;
-  }
-
-#imagen_perro_form_contacto {
-    width: 15em;
-  }
-
-input[type="submit"], input[type="reset"] {
-    background-color: #a97171;
+.menu_footer li a {
     color: white;
-    border: #c0b3a1 2px solid;
-    padding: 0.4em;
-  }
+    text-decoration: none;
+}
+
+.footer-social li {
+    list-style-type: none;
+    display: inline;
+}
+
+.footer-social li a {
+    color: white;
+    text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width:992px) {
+
+    h1 {
+        display: inline;
+    }
+
+    nav ul {
+        display: inline-block;
+    }
+
+    nav ul li {
+        display: inline-block;
+        list-style-type: none;
+    }
+
+    nav ul li a {
+        color: white;
+        font-weight: bold;
+    }
+
+    /* header div .row {
+        height: 5em;
+    } */
+
+    nav li a:hover {
+        color: #a97171;
+    }
+
+    #sectionSalvarVidas h2 {
+        margin-top: 70px;
+    }
+
+    .card-text {
+        font-size: 2em;
+    }
+
+    .menu_footer {
+        margin-top: 20px;
+    }
+
+    img[alt="Logo de Hogar de Patis footer"] {
+        margin-top: 1em;
+        width: 5em;
+    }
+
+    .iconos_redes button {
+        border: none;
+        background: none;
+        color: white;
+    }
+
+    .menu_footer li a:hover {
+        color: #a97171;
+        text-decoration: none;
+    }
+
+    #form_novedades_footer {
+        padding-top: 1em;
+        padding-bottom: 1em;
+    }
+
+    #lista_requisitos_tansitos li {
+        list-style-type: none;
+    }
+
+    #sectionTransitos h4 {
+        margin-left: 2em;
+        font-weight: bold;
+    }
+
+    #lista_requisitos_tansitos {
+        margin-left: 3em;
+    }
+
+    h3 {
+        color: #a97171;
+    }
+
+    hr {
+        border: #b48eb0 2px solid;
+        border-radius: 40px;
+    }
+
+    #imagen_perro_form_contacto {
+        width: 15em;
+    }
+
+    input[type="submit"],
+    input[type="reset"] {
+        background-color: #a97171;
+        color: white;
+        border: #c0b3a1 2px solid;
+        padding: 0.4em;
+    }
+
+
+}
