nuevo footer terminado

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,15 +150,16 @@ footer {
     text-decoration: none;
 }
 
+.container-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
 
-
-
-
-
-
-
-
-
+.copyright{
+    font-size: 70%;
+}
 
 
 
@@ -283,5 +284,12 @@ footer {
         padding: 0.4em;
     }
 
-
+    .container-footer {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    
+    .one-place {
+        max-width: 25%;
+    }
 }
